@@ -17,31 +17,26 @@
 package net.fabricmc.fabric.impl.recipe.ingredient.builtin;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
-import com.mojang.serialization.Codec;
 import com.mojang.serialization.MapCodec;
 
+import net.minecraft.item.Item;
 import net.minecraft.item.ItemStack;
 import net.minecraft.recipe.Ingredient;
+import net.minecraft.registry.entry.RegistryEntry;
 import net.minecraft.util.Identifier;
 
 import net.fabricmc.fabric.api.recipe.v1.ingredient.CustomIngredientSerializer;
 
 public class AllIngredient extends CombinedIngredient {
-	private static final MapCodec<AllIngredient> ALLOW_EMPTY_CODEC = createCodec(Ingredient.ALLOW_EMPTY_CODEC);
-	private static final MapCodec<AllIngredient> DISALLOW_EMPTY_CODEC = createCodec(Ingredient.DISALLOW_EMPTY_CODEC);
-
-	private static MapCodec<AllIngredient> createCodec(Codec<Ingredient> ingredientCodec) {
-		return ingredientCodec
-				.listOf()
-				.fieldOf("ingredients")
-				.xmap(AllIngredient::new, AllIngredient::getIngredients);
-	}
+	private static final MapCodec<AllIngredient> CODEC = Ingredient.CODEC
+			.listOf()
+			.fieldOf("ingredients")
+			.xmap(AllIngredient::new, AllIngredient::getIngredients);
 
 	public static final CustomIngredientSerializer<AllIngredient> SERIALIZER =
-			new Serializer<>(Identifier.of("fabric", "all"), AllIngredient::new, ALLOW_EMPTY_CODEC, DISALLOW_EMPTY_CODEC);
+			new Serializer<>(Identifier.of("fabric", "all"), AllIngredient::new, CODEC);
 
 	public AllIngredient(List<Ingredient> ingredients) {
 		super(ingredients);
@@ -59,13 +54,13 @@ public class AllIngredient extends CombinedIngredient {
 	}
 
 	@Override
-	public List<ItemStack> getMatchingStacks() {
+	public List<RegistryEntry<Item>> getMatchingStacks() {
 		// There's always at least one sub ingredient, so accessing ingredients[0] is safe.
-		List<ItemStack> previewStacks = new ArrayList<>(Arrays.asList(ingredients.get(0).getMatchingStacks()));
+		List<RegistryEntry<Item>> previewStacks = new ArrayList<>(ingredients.getFirst().getMatchingStacks());
 
 		for (int i = 1; i < ingredients.size(); ++i) {
 			Ingredient ing = ingredients.get(i);
-			previewStacks.removeIf(stack -> !ing.test(stack));
+			previewStacks.removeIf(entry -> !ing.test(entry.value().getDefaultStack()));
 		}
 
 		return previewStacks;
